INCLUDE(PackageLibraryMacros)

PACKAGE_CONFIGURE_FILE(${PACKAGE_NAME}_config.h)

PACKAGE_ADD_TEST_DIRECTORIES(utest)

SET(HEADERS "")
SET(SOURCES "")

SET(HEADERS ${HEADERS}
  ${CMAKE_CURRENT_BINARY_DIR}/${PACKAGE_NAME}_config.h)

SET_AND_INC_DIRS(DIR ${CMAKE_CURRENT_SOURCE_DIR})
APPEND_GLOB(HEADERS ${DIR}/*.h)
APPEND_GLOB(SOURCES ${DIR}/*.C)

INCLUDE_DIRECTORIES(
  "${CMAKE_CURRENT_SOURCE_DIR}"
  "${CMAKE_CURRENT_BINARY_DIR}"
)

SET(NO_ADD_DEP TRUE)
SET(NO_ADD_DEP_TPL TRUE)
PACKAGE_ADD_LIBRARY(
	Ioss
	HEADERS	${HEADERS}
	SOURCES ${SOURCES}
)

IF (${PACKAGE_NAME}_ENABLE_EXODUS)
ADD_SUBDIRECTORY(exodusII)
ENDIF()

IF (${PACKAGE_NAME}_ENABLE_Pamgen)
ADD_SUBDIRECTORY(pamgen)
ENDIF()

ADD_SUBDIRECTORY(init)
ADD_SUBDIRECTORY(generated)
ADD_SUBDIRECTORY(heartbeat)
ADD_SUBDIRECTORY(transform)
ADD_SUBDIRECTORY(main)
