option(USE_TRIBITS "Use the Tribits modules to build Exodus" ON)
if(USE_TRIBITS)
  INCLUDE(TribitsSubPackageMacros)
  TRIBITS_SUBPACKAGE(Exodus)
else()
  cmake_minimum_required(VERSION 3.3)
endif()

SET(EXODUSII_VERSION_MAJOR "6")
SET(EXODUSII_VERSION_MINOR "19")
SET(EXODUSII_VERSION_PATCH "0")
SET(EXODUSII_VERSION "${EXODUSII_VERSION_MAJOR}.${EXODUSII_VERSION_MINOR}")
SET(EXODUSII_VERSION_FULL "${EXODUSII_VERSION}.${EXODUSII_VERSION_PATCH}")

ADD_SUBDIRECTORY(cbind)

if(USE_TRIBITS)
  TRIBITS_SUBPACKAGE_POSTPROCESS()
endif()
