if(${CMAKE_PROJECT_NAME} STREQUAL "SEACAS")
  INCLUDE(TribitsPackageMacros)
  TRIBITS_PACKAGE(Exodus)
else()
  INCLUDE(TribitsSubPackageMacros)
  TRIBITS_SUBPACKAGE(Exodus)
endif()

SET(EXODUSII_VERSION_MAJOR "6")
SET(EXODUSII_VERSION_MINOR "19")
SET(EXODUSII_VERSION_PATCH "0")
SET(EXODUSII_VERSION "${EXODUSII_VERSION_MAJOR}.${EXODUSII_VERSION_MINOR}")
SET(EXODUSII_VERSION_FULL "${EXODUSII_VERSION}.${EXODUSII_VERSION_PATCH}")

ADD_SUBDIRECTORY(cbind)

if(${CMAKE_PROJECT_NAME} STREQUAL "SEACAS")
  TRIBITS_PACKAGE_POSTPROCESS()
else()
  TRIBITS_SUBPACKAGE_POSTPROCESS()
endif()
