if(${CMAKE_PROJECT_NAME} STREQUAL "SEACAS")
  TRIBITS_PACKAGE(Exodus_for)
else()
  INCLUDE(TribitsSubPackageMacros)
  TRIBITS_SUBPACKAGE(Exodus_for)
endif()

SET(EXODUSII_VERSION_MAJOR "5")
SET(EXODUSII_VERSION_MINOR "10")
SET(EXODUSII_VERSION_PATCH "0")
SET(EXODUSII_VERSION "${EXODUSII_VERSION_MAJOR}.${EXODUSII_VERSION_MINOR}")
SET(EXODUSII_VERSION_FULL "${EXODUSII_VERSION}.${EXODUSII_VERSION_PATCH}")

ADD_SUBDIRECTORY(forbind)

if(${CMAKE_PROJECT_NAME} STREQUAL "SEACAS")
  TRIBITS_PACKAGE_POSTPROCESS()
else()
  TRIBITS_SUBPACKAGE_POSTPROCESS()
endif()
