INCLUDE(TribitsLibraryMacros)
INCLUDE(CheckIncludeFile)

if(${CMAKE_PROJECT_NAME} STREQUAL "SEACAS")
  TRIBITS_SUBPACKAGE(Ionit)
endif()
SET(HEADERS "")
SET(SOURCES "")

SET_AND_INC_DIRS(DIR ${CMAKE_CURRENT_SOURCE_DIR})
APPEND_GLOB(HEADERS ${DIR}/*.h)
APPEND_GLOB(SOURCES ${DIR}/*.C)

INCLUDE_DIRECTORIES(
  "${CMAKE_CURRENT_SOURCE_DIR}/../"
  "${CMAKE_CURRENT_BINARY_DIR}/../"
)

ENABLED(Exodus)
ASSERT_DEFINED(IS_ENABLED_Exodus)
IF (${IS_ENABLED_Exodus})
  IF (NOT ${${ENABLED}_ENABLE_MPI})
    ADD_DEFINITIONS(-DNO_DOF_EXODUS_SUPPORT)
  ENDIF()
ELSE()
  ADD_DEFINITIONS(-DNO_EXODUS_SUPPORT)
ENDIF()

ENABLED(Pamgen)
ASSERT_DEFINED(IS_ENABLED_Pamgen)
IF (NOT ${IS_ENABLED_Pamgen})
  ADD_DEFINITIONS(-DNO_PAMGEN_SUPPORT)
ENDIF()

ENABLED(ParaviewImesh)
IF (NOT ${IS_ENABLED_ParaviewImesh})
  ADD_DEFINITIONS(-DNO_PARAVIEWIMESH_SUPPORT)
ENDIF()


TRIBITS_ADD_LIBRARY(
	Ionit
	HEADERS	${HEADERS}
	SOURCES ${SOURCES}
)

IF (BUILD_TESTING)
  ENABLE_TESTING()
ENDIF (BUILD_TESTING)

if(${CMAKE_PROJECT_NAME} STREQUAL "SEACAS")
  INSTALL(FILES ${HEADERS} DESTINATION
      ${CMAKE_INSTALL_PREFIX}/include/init/)
else()
  INSTALL(FILES ${HEADERS} DESTINATION
      ${CMAKE_INSTALL_PREFIX}/${Trilinos_INSTALL_INCLUDE_DIR}/init/)
endif()


if(${CMAKE_PROJECT_NAME} STREQUAL "SEACAS")
  TRIBITS_SUBPACKAGE_POSTPROCESS()
endif()
